add role column
